--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-302.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-968.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-206.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-315.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-284.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-755.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇮🇹 意大利-204.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇯🇵 日本-297.9KB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-818.5KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-217.2KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-755.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 134.195.196.89, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇮🇹 意大利-204.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇺🇸 美国-347.8KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-814.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-529.9KB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-318.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-247.2KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-520.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-302.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-968.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-315.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-284.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-297.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-818.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-217.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-755.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-204.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-814.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-529.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-520.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
