--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-544.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-278.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-284.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-247.2KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-499.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-428.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-209.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-244.2KB/s(Youtube:不良林), server: 185.160.26.35, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-209.4KB/s(Youtube:不良林), server: 185.160.26.35, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-248.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-238.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-462.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-291.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-563.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-262.1KB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-832.0KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇦 加拿大-224.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-452.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-544.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-284.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-209.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-244.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-462.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-262.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
